--- a/movie-database-project-frontend/package.json
+++ b/movie-database-project-frontend/package.json
@@ -14,7 +14,8 @@
     "next": "16.0.0",
     "postcss": "^8.5.6",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-intersection-observer": "^10.0.0"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
